<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weave</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Onboarding -->

    <string name="onboarding_welcome">Welcome to Weave!</string>
    <string name="onboarding_create_account">Create Account</string>
    <string name="onboarding_skip_social">Continue without Social account</string>
    <string name="onboarding_facebook">Login with Facebook</string>
    <string name="onboarding_twitter">Login with Twitter</string>
    <string name="onboarding_google_plus">Login with Google Plus</string>
    <string name="onboarding_microsoft">Login with Microsoft</string>
    <string name="onboarding_login_fail">Could not login</string>

    <!-- Settings -->

    <string name="settings">Settings</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_manage_sources">Manage Sources</string>
    <string name="settings_add_source">Add Source</string>
    <string name="settings_edit">Edit</string>
    <string name="settings_delete">Delete</string>

    <!-- Actions -->

    <string name="action_share">Share</string>

</resources>